# dealscan-insight

./: .coveragerc  .cursor-review-trigger  .cursorrules  .dockerignore  .env  .env.example  .gitignore  .paperclip-env  .paperclip-env.example  .pre-commit-config.yaml  .vercelignore  AGENTS.md  AUDIT_COMPARISON.md  AUDIT_PHASE1.md  AUDIT_PHASE1_CURSOR.md  AUDIT_PHASE2.md  AUDIT_TRIGGER.md  AUDIT_YESTERDAY.md  CLEAN_SWEEP_REPORT.md  CLEAN_SWEEP_REPORT_M2.md  CODEX_AUDIT.md  CODEX_SYNC_INSTRUCTIONS.md  CONTRIBUTING.md  CURSOR_ROUND2_AUDIT.md  DEALERSCOPE_CRITICAL_FIXES_SUMMARY.md  DEALERSCOPE_CURRENT_STATUS_REPORT.md  DEALERSCOPE_ML_AI_IMPLEMENTATION_PLAN.md  DEALERSCOPE_ROVER_INTEGRATION_COMPLETE.md  DEALERSCOPE_SECURITY_IMPLEMENTATION_COMPLETE.md  DEALERSCOPE_TECHNICAL_STRATEGIC_AUDIT_2026-03-11.md  DEALERSCOPE_V49_SECURITY_AUDIT_REPORT.md  DEEPSEEK_AUDIT.md  DEEP_SCAN_REPORT.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_STATUS.md  Dockerfile  Dockerfile.prod  ENHANCEMENT_SUMMARY.md  EXPORT_README.md  FINAL_SWEEP_REPORT.md  (+56 more)
.cursor/: mcp.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  dependabot.yml  rover_code_verification.md
.greptile/: config.json
.trash/: google-cloud-build-trigger-removal-target-2026-05-20.md.20260520T180518Z
ace/: .gitignore  README.md  SECURITY.md  STATUS.md  V1.1-SCOPE.md  __init__.py  ace.py  action_runtime.py  autonomy_lane.py  briefing.py  commitment_parser.py  cost_guardrails.py  cycle.py  digest_resume_context.py  doc_contradictions.py  drift.py  false_closure_advisory.py  filter_health.py  governed_execution.py  (+27 more)
(+1236 files in other folders)
