[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "super-ace-governed-foundation"
version = "0.1.0"
description = "Super A.C.E. governed foundation / Phase 0 continuity substrate for DealerScope work with two narrow local-only Phase 1 closed-loop proofs, two narrow local-only Phase 2 action-runtime proofs, one narrow local-only Phase 3 resume/recovery proof, and one narrow local-only Phase 4 runtime-ownership proof"
readme = "ace/README.md"
requires-python = ">=3.14"
license = { text = "Proprietary" }
authors = [
  { name = "Andrew Pilson" }
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["ace*"]

[tool.setuptools.package-data]
ace = [
  "state/.gitkeep",
  "tests/fixtures/**/*.db",
  "tests/fixtures/**/*.json"
]
